2011-05-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[maint] Decruft: Remove obsolete makefile target.

	* Makefile.am (destroy-nonmodule-guile-pg-prior-install):
	Delete target.

2011-05-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use Guile-BAUX for doc snarfing.

	* build-aux/common.mk: New file.

	* doc/Makefile.am: include .../common.mk;
	don't include twerp.mk-am-frag.
	(guile_pg_TEXINFOS): Add ref.texi.
	(EXTRA_DIST): Remove guile-pg.twerp; add ref.texh.
	[MAINTAINER_MODE] (.twerp.texi): Delete old-style suffix rule.
	[MAINTAINER_MODE] (SUFFIXES, snippets): New vars.
	[MAINTAINER_MODE] (.texh.texi): New old-style suffix rule.
	[MAINTAINER_MODE] (ref.texi): New dependency decl.
	* doc/guile-pg.texi: Rename from guile-pg.twerp.
	* doc/ref.texh: New file.
	* doc/.make-automake-frags: Delete file.
	* doc/.twerp-list: Delete file.

	* autogen.sh: Don't invoke doc/.make-automake-frags.
	* configure.ac (twerp-prep): Delete AC_CONFIG_COMMANDS.

2011-05-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build boot] Import Guile-BAUX modules for doc snarfing.

	* autogen.sh: Add command to import Guile-BAUX modules.

2011-05-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build boot] Don't install 3rd-party m4 files.

	* autogen.sh: Don't check guile.m4 for freshness;
	invoke aclocal without ‘--install’.
	* build-aux/guile.m4.snap: Delete file.

2011-05-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build doc] Reduce unorthodoxy: Build .info in srcdir.

	* doc/Makefile.am (DISTCLEANFILES): Delete var.

2011-01-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Combine PGRES_COPY_{OUT,IN} descriptions; add xref.

	* doc/guile-pg.twerp (Processing Results) <result status table>:
	Combine ‘PGRES_COPY_OUT’ and ‘PGRES_COPY_IN’; rewrite blurb.

2010-11-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New (database postgres-qcons) proc: idquote

	* doc/guile-pg.twerp (qcons quoting): Add @twerpdoc for ‘idquote’.

2010-06-26  Thien-Thi Nguyen  <ttn@gnuvola.org>
