@@ -1,3 +1,11 @@
+2011-05-07  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[build int] Use Guile-BAUX for init snarfing.
+
+	* autogen.sh: Import Guile-BAUX module ‘c2x’.
+	* build-aux/guile-pg.m4 (AC_GUILE_PG_BCOMPAT):
+	Delete call to ‘GUILE_C2X_METHOD’.
+
 2011-05-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[maint] Decruft: Remove obsolete makefile target.
